--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h1 {
 
 .line, .destination, .arrival {
   font-size: 2.1rem;
-  font-weight: 400;
+  font-weight: 500;
   text-transform: uppercase;
   display: inline-block;
 }
@@ -71,12 +71,12 @@ h1 {
   border-top: 0.1rem solid;
   border-bottom: 0.1rem solid;
   border-color: #e5e5e5;
-  padding-bottom: 20%;
+  padding-bottom: 24%;
 }
 
 .green-indicator {
   float: left;
-  height: 12.5rem;
+  height: 14rem;
   width: 1rem;
   background-color: #98E175;
 }
@@ -85,7 +85,7 @@ h1 {
   font-size: 3.5rem;
   font-weight: 600;
   float: left;
-  padding: 1.5rem 0rem 2rem 1.9rem;
+  padding: 1.75rem 0rem 2rem 2rem;
   /*padding: top, right, bottom, left*/
 }
 
@@ -93,14 +93,14 @@ h1 {
 so I can group destination name, direction, and frequency together */
 .location {
   float: left;
-  padding: 1.5rem 0rem 2rem 4rem;
+  padding: 1.75rem 0rem 2rem 4rem;
 }
 
 /* column chunk for arrival:
 so I can group the time and minutes together  */
 .times {
   float: left;
-  padding: 1.5rem 0rem 2rem 6rem;
+  padding: 1.75rem 0rem 2rem 4rem;
 }
 
 /* use this to control space b/t Randolph and Easbound */
@@ -110,7 +110,6 @@ so I can group the time and minutes together  */
   padding-bottom: 3%;
 }
 
-
 .direction {
   color: gray;
   font-size: 2.2rem;
@@ -119,20 +118,24 @@ so I can group the time and minutes together  */
 
 .frequency {
   color: gray;
-  font-size: 1.9rem;
+  font-size: 2rem;
   font-weight: 300;
-  padding-top: 8%;
+  padding-top: 11%;
 }
 
 .actual-time {
   font-size: 2.6rem;
   font-weight: 600;
-  padding-bottom: 4%;
+  padding-bottom: 7%;
 }
 
 .minutes {
   color: gray;
-  font-size: 1.9rem;
+  font-size: 2rem;
   font-weight: 300;
   text-align: right;
 }
+
+
+
+/* ------------------------------------------- */
