--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 nav {
   background-color: #00697F;
   position: fixed;
-  height: 12rem;
+  height: 14rem;
   width: 100%;
 }
 
@@ -41,7 +41,7 @@ h1 {
   font-weight: 500;
   text-align: center;
   color: white;
-  padding: 5rem;
+  padding: 4rem;
 }
 
 /* Line, Destination, Arrival: Header */
@@ -85,7 +85,7 @@ h1 {
   font-size: 3.5rem;
   font-weight: 600;
   float: left;
-  padding: 1.75rem 0rem 2rem 2rem;
+  padding: 1.95rem 0rem 2rem 2rem;
   /*padding: top, right, bottom, left*/
 }
 
@@ -93,14 +93,14 @@ h1 {
 so I can group destination name, direction, and frequency together */
 .location {
   float: left;
-  padding: 1.75rem 0rem 2rem 4rem;
+  padding: 1.95rem 0rem 2rem 4rem;
 }
 
 /* column chunk for arrival:
 so I can group the time and minutes together  */
 .times {
   float: left;
-  padding: 1.75rem 0rem 2rem 4rem;
+  padding: 1.95rem 0rem 2rem 4rem;
 }
 
 /* use this to control space b/t Randolph and Easbound */
@@ -136,6 +136,10 @@ so I can group the time and minutes together  */
   text-align: right;
 }
 
-
+.arrow-right {
+  color: gray;
+  float: left;
+  padding: 5rem 0rem 1rem 3rem;
+}
 
 /* ------------------------------------------- */
