--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ h1 {
 
 .line {
   padding-left: 1.8rem;
-  padding-right: 3.8rem;
+  padding-right: 4.8rem;
 }
 
 .destination {
@@ -86,6 +86,8 @@ h1 {
   font-weight: 600;
   float: left;
   padding: 1.95rem 0rem 2rem 2rem;
+  width: 123.13px;
+
   /*padding: top, right, bottom, left*/
 }
 
@@ -94,6 +96,8 @@ so I can group destination name, direction, and frequency together */
 .location {
   float: left;
   padding: 1.95rem 0rem 2rem 4rem;
+  min-width: 500.44px;
+
 }
 
 /* column chunk for arrival:
