--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ so I can group the time and minutes together  */
 }
 
 /* ------------------------------------------- */
-.devon {
+.stony {
   height: 14rem;
   width: 3rem;
 }
