--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Universal Selectors */
 * {
 box-sizing: border-box;
 }
@@ -9,8 +10,6 @@ box-sizing: border-box;
 body {
   background-color: white;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 100;
-  font-size: 10px;
 }
 
 .container {
@@ -18,25 +17,21 @@ body {
   width: 100%;
 }
 
+/* Navbar content */
+.arrow-left {
+  color: white;
+  float: left;
+
+  padding-top: 2.5rem;
+  padding-left: 3rem;
+}
+
 nav {
   background-color: #00697F;
   position: fixed;
-  height: 14rem;
+  height: 14.5rem;
   width: 100%;
 }
-
-/* Screenshot of Map */
-.map-image {
-  padding-top: 0rem;
-  height: 750px;
-}
-
-img {
-  width: 61.2rem;
-
-}
-
-/* ------------------------------- */
 
 h1 {
   font-size: 3.6rem;
@@ -46,11 +41,18 @@ h1 {
   padding: 3.7rem;
 }
 
-/* Line, Destination, Arrival: Header */
+.map-image {
+  height: 750px;
+}
+
+img {
+  width: 61.2rem;
+}
+
+/* Header: Line, Destination, Arrival */
 .list-header {
   background-color: white;
   padding-top: 1.5rem;
-
 }
 
 .line, .destination, .arrival {
@@ -60,20 +62,19 @@ h1 {
   letter-spacing: 1px;
   padding-bottom: 0.7rem;
   text-transform: uppercase;
-
 }
 
 .line {
-  padding-left: 2.3rem;
-  padding-right: 3.6rem;
+  padding-left: 2.3rem; /* control spacing from left-edge */
+  padding-right: 3.6rem; /* control spacing between 'line' and 'destination' */
 }
 
 .destination {
-  padding-right: 14rem;
+  padding-right: 14rem; /* control spacing between 'destination' and 'arrival'*/
 }
 /*-------------------------------- */
 
-/* Controls size of each box */
+/* Controls size of each row */
 .grid {
   border-top: 0.1rem solid;
   border-bottom: 0.1rem solid;
@@ -86,24 +87,24 @@ h1 {
 }
 
 .green-indicator {
+  background-color: #98E175;
   float: left;
   height: 14rem;
   width: 1rem;
-  background-color: #98E175;
 }
 
 .orange-indicator {
+  background-color: orange;
   float: left;
   height: 14rem;
   width: 1rem;
-  background-color: orange;
 }
 
 .red-indicator {
+  background-color: #F55757;
   float: left;
   height: 14rem;
   width: 1rem;
-  background-color: #F55757;
 }
 
 .bus-number {
@@ -115,29 +116,39 @@ h1 {
 }
 
 /* column chunk for destination:
-so I can group destination name, direction, and frequency together */
+so I can group destination name, direction, and frequency together as one column */
 .location {
   float: left;
-  padding: 2rem 0rem 2rem 3rem;
   min-width: 500.44px;
+  padding: 2rem 0rem 2rem 3rem;
 }
 
 /* column chunk for arrival:
-so I can group the time and minutes together  */
+so I can group the time and minutes together as one column  */
 .times {
   float: left;
   padding: 2rem 0rem 2rem 2rem;
 }
 
+/* created this div class `break` to help align my arrows; the width of the times
+(i.e. 9:45 AM vs 10:05 AM were different, so arrows were not aligning properly
+since 10:05 AM is longer)*/
+
 .break {
+  background-color: white;
   float: left;
   height: 14rem;
   width: 4rem;
-  background-color: white;
 }
 
+/* used this to align the three arrows that weren't ligning up due to the
+longer width of the time */
+.align {
+  height: 14rem;
+  width: 3rem;
+}
 
-/* use this to control space b/t Randolph and Easbound */
+/* Control text styling for route info and times */
 .destination-name {
   font-size: 2.4rem;
   font-weight: 600;
@@ -160,8 +171,8 @@ so I can group the time and minutes together  */
 .actual-time {
   font-size: 2.4rem;
   font-weight: 600;
-  padding-bottom: 7%;
   min-width: 160px;
+  padding-bottom: 7%;
 }
 
 .minutes {
@@ -171,14 +182,9 @@ so I can group the time and minutes together  */
   text-align: right;
 }
 
+/* control arrow styling/positioning */
 .arrow-right {
   color: gray;
   float: left;
   padding-top: 5rem;
-}
-
-/* ------------------------------------------- */
-.stony {
-  height: 14rem;
-  width: 3rem;
 }
