--- a/css/style.css
+++ b/css/style.css
@@ -162,10 +162,10 @@ longer width of the time */
 }
 
 .frequency {
-  color: gray;
+  color: black;
   font-size: 2.1rem;
-  font-weight: 300;
-  padding-top: 9%;
+  font-weight: 400;
+  padding-top: 10%;
 }
 
 .actual-time {
