--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
 
+li, ul {
+  list-style-type: none;
+}
+
 body {
   background-color: white;
   font-family: 'Montserrat', sans-serif;
